--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -30,5 +32,8 @@
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "overrides": {
+    "@svgr/webpack": "$@svgr/webpack"
+  }
 }
